--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: Mighten Yip personal website
+title: Mighten Yip
 
 # Short description of your site
 description: A virtual proof that I'm awesome
@@ -14,9 +14,10 @@ author: Mighten Yip
 navbar-links:
   About Me: "aboutme"
   CV: "CV"
-  Hobby: "Other interests and hobbies"
+  Other interests and hobbies: "hobbies"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    # - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - PBL@Georgia Tech: "http://pbl.gatech.edu/"
     - Learn markdown: "https://www.markdowntutorial.com/"
   #Author's home: "https://deanattali.com"
 
@@ -24,7 +25,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/favicon.ico"
+# avatar: "/assets/img/mthood2.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: false
@@ -42,9 +43,9 @@ round-avatar: false
 social-network-links:
   email: "mighteny@example.com"
   instagram: mig10yip
-  github: mightenyip
+  #github: mightenyip
   twitter: mig10yip
-  rss: true
+  rss: false
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -99,7 +100,7 @@ footer-link-col: "#404040"
 
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
-#page-img: "/assets/img/bgimage.png"
+page-img: "/assets/img/mthood2.jpg"
 
 # --- Web Statistics Section --- #
 
