--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ round-avatar: false
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
 #title-img: /path/to/image
-
+favicon: "favicon.ico"
 
 # --- Footer options --- #
 
@@ -74,7 +74,7 @@ share-links-active:
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
 #url-pretty: "MyWebsite.com"
-share-img: "favicon.ico"
+# share-img: "favicon.ico"
 # Create a "tags" index page and make tags on each post clickable
 link-tags: false
 
@@ -88,7 +88,7 @@ excerpt_length: 50
 navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
-page-col: "#FFFFFF"
+page-col: "#FFFFFF"   #228B22
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
@@ -100,7 +100,7 @@ footer-link-col: "#404040"
 
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
-page-img: "/assets/img/mthood2.jpg"
+#page-img: "/assets/img/bgimage.png"
 
 # --- Web Statistics Section --- #
 
@@ -169,7 +169,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/New York"
+timezone: "America/New_York"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
