--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Mighten Yip
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+  #About Me: "aboutme"
   CV: "https://www.researchgate.net/profile/Mighten_Yip"
   #Other interests and hobbies: "hobbies"
   Resources:
