--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social-network-links:
   twitter: mig10yip
   rss: false
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: "https://www.linkedin.com/in/mighten-yip-ab95b174/"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
