--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ navbar-links:
     # - Beautiful Jekyll: "https://beautifuljekyll.com"
     - PBL@Georgia Tech: "http://pbl.gatech.edu/"
     - Nucleate Atlanta: "https://www.nucleate.xyz/"
+    - Neuromatic Devices: "https://neuromaticdevices.com/"
   #Author's home: "https://deanattali.com"
 
 # --- Logo --- #
