--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@ author: Mighten Yip
 navbar-links:
   About: /
   Projects: /projects
-  Blog: /
+  Google Scholar: https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en
 
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: /assets/img/avatar.jpg
+avatar: /assets/img/MY-headshot-851.jpg
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
-round-avatar: false
+round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -40,12 +40,12 @@ favicon: "favicon.ico"
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: mightenyip@gmail.com
+  #email: mightenyip@gmail.com
   github: mightenyip
   twitter: patcherBot
   linkedin: mightenyip
-  scholar: "https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en"
-  orcid: "https://orcid.org/0000-0000-0000-0000"
+  Google Scholar: "https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en"
+  #orcid: "https://orcid.org/0000-0000-0000-0000"
   rss: false
 
 # Look & feel
@@ -60,7 +60,7 @@ keywords: [biotech, robotics, AI, portfolio, patcherbot, palate]
 # Select which social network share links to show in posts
 share-links-active:
   twitter: true
-  instagram: true
+  instagram: false
   linkedin: true
   vk: false
 
