Redesign project layout: smaller thumbnails (80px), title to the right, more spacing between projects

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,7 +11,7 @@
       url: https://repository.gatech.edu/entities/publication/640bef49-75ce-4675-b4e8-d253a55f2b8b
 
 - title: Palate Therapeutics — taste-bud siRNA therapy
-  image: /assets/img/projects/palate.jpg
+  image: /assets/img/projects/palate.png
   description: Pre-clinical oligo therapy modulating sugar preference; $645K pre-seed raised; developed a strategic partnership with Novo Nordisk BioInnovation Hub. Managed all the technical and scientific programs while supporting the operational day-to-day and business development.
   tags: [therapeutics, siRNA-therapy, metabolism]
   details:
