Reduce landing avatar size from 80px to 60px for more compact layout

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # --- Basic options --- #
 
 # Branding
-title: Mighten Yip
+title: DMs open, let's chat!
 subtitle: Engineering‑driven biotech founder • Robotics • AI for life sciences
 url: https://mightenyip.github.io
 
@@ -44,10 +44,10 @@ favicon: "favicon.ico"
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
   #email: mightenyip@gmail.com
-  github: mightenyip
-  twitter: patcherBot
-  linkedin: mightenyip
-  Google Scholar: "https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en"
+  #github: mightenyip
+  #twitter: patcherBot
+  #linkedin: mightenyip
+  #Google Scholar: "https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en"
   #orcid: "https://orcid.org/0000-0000-0000-0000"
   rss: false
 
