--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ plugins:
 # Author block (shows in sidebars, footer, etc.)
 author:
   name: "Mighten Yip"
-  avatar: "/assets/img/MY-headshot-851.jpg"
+  avatar: "/assets/img/Mighten-Yip-headshot-B.png"
   bio: "I build robotics, therapeutics, and AI systems that ship."
   location: "San Francisco Bay Area"
   links:
@@ -56,7 +56,7 @@ defaults:
 
 # Look & feel
 minimal_mistakes_skin: "default"  # try: "air", "contrast", "dark"
-logo: "/assets/img/MY-headshot-851.jpg"
+logo: "/assets/img/Mighten-Yip-headshot-B.png"
 
 paginate: 5
 paginate_path: /page:num/
@@ -64,68 +64,20 @@ paginate_path: /page:num/
 # SEO
 repository: "mightenyip/mightenyip.github.io"
 
-# --- Footer options --- #
-
-# Select the social network links that you want to show in the footer.
-# Uncomment the links you want to show and add your information to each one.
-# If you don't want to show a link to an RSS feed, set rss to "false".
-social-network-links:
-  email: "mighteny@gatech.edu"
-  instagram: mig10yip
-  #github: mightenyip
-  twitter: mig10yip
-  rss: false
-#  reddit: yourname
-  linkedin: "mighten-yip-ab95b174/"
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
-
-# --- General options --- #
-
-# Select which social network share links to show in posts
-share-links-active:
-  twitter: true
-  instagram: true
-  linkedin: true
-  vk: false
-
-# How to display the link to your website in the footer
-# Remove this if you don't want a link in the footer
-#url-pretty: "MyWebsite.com"
-# share-img: "favicon.ico"
-# Create a "tags" index page and make tags on each post clickable
-link-tags: false
-
-# Excerpt Word Length - Truncates the excerpt to the specified number of words on the index page
-excerpt_length: 50
-
-# --- Colours / background image --- #
-
-# Personalize the colors in your website. Colour values can be any valid CSS colour
-
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-border-col: "#EAEAEA"
-page-col: "#FFFFFF"   #228B22
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#F5F5F5"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-
-# Alternatively, the navbar, footer, and page background can be set to use background images
-# instead of colour
+# Footer links
+footer_links:
+  - label: "Email"
+    icon: "fas fa-envelope"
+    url: "mailto:mightenyip@gmail.com"
+  - label: "GitHub"
+    icon: "fab fa-github"
+    url: "https://github.com/mightenyip"
+  - label: "Twitter"
+    icon: "fab fa-twitter"
+    url: "https://twitter.com/patcherBot"
+  - label: "LinkedIn"
+    icon: "fab fa-linkedin"
+    url: "https://www.linkedin.com/in/mightenyip/"
 
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
@@ -195,50 +147,12 @@ date_format: "%B %-d, %Y"
 #fb_app_id: ""
 
 
-# --- You don't need to touch anything below here (but you can if you want) --- #
-
-# Output options (more information on Jekyll's site)
-timezone: "America/New_York"
-markdown: kramdown
-highlighter: rouge
-permalink: /:year-:month-:day-:title/
-paginate: 5
-
-kramdown:
-  input: GFM
-
-# Default YAML values (more information on Jekyll's site)
-defaults:
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-      comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
-      readtime: false # add estimated reading time on all blog posts
-  -
-    scope:
-      path: "" # all files
-    values:
-      layout: "page"
-      show-avatar: true
-
 # Exclude these files from production site
 exclude:
   - CHANGELOG.md
-  - CNAME
   - Gemfile
   - Gemfile.lock
   - LICENSE
   - README.md
   - screenshot.png
   - docs/
-
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
