--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,3 +3,5 @@ main:
     url: /
   - title: "Projects"
     url: /projects/
+  - title: "Google Scholar"
+    url: "https://scholar.google.com/citations?user=4PTlxQcAAAAJ&hl=en"
