--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: "https://mightenyip.github.io"
 # baseurl: ""   # keep blank for user sites
 
 # Minimal Mistakes via remote_theme
-remote_theme: "mmistakes/minimal-mistakes@4.26.1"
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 
 plugins:
   - jekyll-include-cache
@@ -83,16 +83,10 @@ feed:
 
 # Analytics
 analytics:
-  provider               : "custom"
-  custom:
-    - "<!-- Google tag (gtag.js) -->"
-    - "<script async src=\"https://www.googletagmanager.com/gtag/js?id=G-WSHF60YN4E\"></script>"
-    - "<script>"
-    - "  window.dataLayer = window.dataLayer || [];"
-    - "  function gtag(){dataLayer.push(arguments);}"
-    - "  gtag('js', new Date());"
-    - "  gtag('config', 'G-WSHF60YN4E');"
-    - "</script>"
+  provider               : "google-gtag"
+  google:
+    tracking_id          : "G-WSHF60YN4E"
+    anonymize_ip         : true
 
 # Google Tag Manager ID
 #gtm: ""
